sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:20: error: '(' expected but identifier found.
    if plusPetit(i,i+1) {
       ^AlgBubbleSort1:23: error: illegal start of simple expression
  }
  ^